--- a/index.html
+++ b/index.html
@@ -5,23 +5,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <!-- Шапка сайта -->
-    <header>
-        <nav>
-            <a href="">WebStudio</a>
-            <ul>
-                <li><a href="">Cтудия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+
+    <header class="header">
+        <nav class="site-nav">
+            <a class="logo"><span class="logo-color">Web</span>Studio</a>
+            <ul class=" site-nav list">
+                <li><a href="" class="link-current">Cтудия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
 
-            <ul>
-                <li><a href="">info@devstudio.com</a></li>
-                <li><a href="">+38 096 111 11 11</a></li>
+            <ul class="contacts-nav list">
+                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li><a href="tel:=380961111111" class=link>+38 096 111 11 11</a></li>
             </ul>
 
     </header>
@@ -29,36 +35,36 @@
     <main>
         <!-- Герой -->
 
-        <section>
-            <h1> Эфективные решения для вашего бизнеса </h1>
-           <button type="button">Заказать услугу</button>
+        <section class="hero">
+            <h1 class="hero-title"> Эфективные решения <br> для вашего бизнеса </h1>
+            <button class="button" type="button">Заказать услугу</button>
         </section>
 
-        <!-- Преимущества -->
-        <section>
+        <!-- Преимущества  benefits-->
+        <section class="section">
             <h2 class="visually-hidden">Наши преимущества</h2>
-            <ul>
+            <ul class="list">
                 <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>
+                    <h2 class="section-title benefits">ВНИМАНИЕ К ДЕТАЛЯМ</h2>
+                    <p class="benefits-description">
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
-                    <p>
+                    <h2 class="section-title benefits">ПУНКТУАЛЬНОСТЬ</h2>
+                    <p class="benefits-description">
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
-                    <p>
+                    <h2 class="section-title benefits">ПЛАНИРОВАНИЕ</h2>
+                    <p class="benefits-description">
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>
+                    <h2 class="section-title benefits">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h2>
+                    <p class="benefits-description">
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
                 </li>
@@ -66,10 +72,10 @@
         </section>
 
         <!-- чем мы занимаемся -->
-        <section>
-            <h2>Чем мы занимаемся</h2>
+        <section class="section">
+            <h2 class="workingplace-title">Чем мы занимаемся</h2>
 
-            <ul>
+            <ul class=" workingplace-list list">
                 <li>
                     <img src="./img/box1.jpg" alt="Рабочий стол разработчика" width="370" />
                 </li>
@@ -83,44 +89,45 @@
         </section>
 
         <!--Наша команда -->
-        <section>
-            <h2>Наша команда</h2>
+        <section class="section">
+            <h2 class="team-title">Наша команда</h2>
 
-            <ul>
-                <li>
+            <ul class=" team-title list">
+                <li class="item">
                     <img src="./img/img1.jpg" alt="Сотрудник нашей команды"  width="270"/>
-                    <h3>Игорь Демьяненко</h3>
-                    <p> Product designer</p>
+                    <h3 class="name-title">Игорь Демьяненко</h3>
+                    <p class="team-position"> Product designer</p>
                 </li>
-            <li>
-               <img src="./img/img2.jpg" alt="Сотрудник нашей команды" width="270" />
-                <h3>Ольга Репина</h3>
-                <p> Frontend developer</p>
+            <li class="item">
+                <img src="./img/img2.jpg" alt="Сотрудник нашей команды" width="270" />
+                <h3 class="name-title">Ольга Репина</h3>
+                <p class="team-position"> Frontend developer</p>
             </li>
-            <li>
-                <img src="./img/img3.jpg" alt="Сотрудник нашей команды" width="270" />
-                <h3>Николай Тарасов</h3>
-                <p> Marketing</p>
+            <li class=item>
+               <img src="./img/img3.jpg" alt="Сотрудник нашей команды" width="270" />
+                <h3 class="name-title">Николай Тарасов</h3>
+                <p class="team-position"> Marketing</p>
             </li>
-            <li>
-                <img src="./img/img4.jpg" alt="Сотрудник нашей команды" width="270" />
-                <h3>Михаил Ермаков</h3>
-                <p> UA designer</p>
+            <li class="item">
+               <img src="./img/img4.jpg" alt="Сотрудник нашей команды" width="270" />
+                <h3 class="name-title">Михаил Ермаков</h3>
+                <p class="team-position"> UA designer</p>
             </li>
             </ul>
         </section>
     </main>
 
     <!-- Футер -->
-    <footer>
-       <a href="">WebStudio</a>
+    <footer class="footer-section">
+        <a class="logo"><span class="logo-color">Web</span><span class="logo-color-white">Studio</span> </a>
 
-         <address>
-            <p>г. Киев Леси Украинки, 26</p>
-        <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+38 096 111 11 11</a></li>
-        </ul>
+        <address>
+            <p class="address location">г. Киев Леси Украинки, 26</p>
+
+            <ul class="list">
+                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li><a href="tel:=380961111111" class=link>+38 096 111 11 11</a></li>
+            </ul>
         </address>
     </footer>
 </body>
