правки и сверка с тз

--- a/index.html
+++ b/index.html
@@ -95,22 +95,22 @@
             <ul class=" team-title list">
                 <li class="item">
                     <img src="./img/img1.jpg" alt="Сотрудник нашей команды"  width="270"/>
-                    <h3 class="name-title">Игорь Демьяненко</h3>
+                    <h3 class="team-name">Игорь Демьяненко</h3>
                     <p class="team-position"> Product designer</p>
                 </li>
             <li class="item">
                 <img src="./img/img2.jpg" alt="Сотрудник нашей команды" width="270" />
-                <h3 class="name-title">Ольга Репина</h3>
+                <h3 class="team-name">Ольга Репина</h3>
                 <p class="team-position"> Frontend developer</p>
             </li>
             <li class=item>
                <img src="./img/img3.jpg" alt="Сотрудник нашей команды" width="270" />
-                <h3 class="name-title">Николай Тарасов</h3>
+                <h3 class="team-name">Николай Тарасов</h3>
                 <p class="team-position"> Marketing</p>
             </li>
             <li class="item">
                <img src="./img/img4.jpg" alt="Сотрудник нашей команды" width="270" />
-                <h3 class="name-title">Михаил Ермаков</h3>
+                <h3 class="team-name">Михаил Ермаков</h3>
                 <p class="team-position"> UA designer</p>
             </li>
             </ul>
