--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
                 </li>
             </ul>
 
-
+            <!-- Портфолио -->
             <ul class="list">
                 <li>
                   <article>
@@ -120,9 +120,8 @@
                 </li>
             </ul>
         </section>
-
-
     </main>
+
 <!-- футер -->
     <footer class="footer-section">
         <a class="logo"><span class="logo-color">Web</span><span class="logo-color-white">Studio</span> </a>
