правки из превью

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
             <h1 class="visually-hidden">Портфолио</h1>
             <ul class="list">
                 <li>
-                   <button class="portfolio-button" type="button" >Все</button>
+                   <button class="portfolio-button link-current" type="button" >Все</button>
                 </li>
                 <li>
                     <button class="portfolio-button" type="button">Веб-сайты</button>
@@ -123,18 +123,22 @@
     </main>
 
 <!-- футер -->
-    <footer class="footer-section">
-        <a class="logo"><span class="logo-color">Web</span><span class="logo-color-white">Studio</span> </a>
+<footer class="footer-section">
+    <a class="logo"><span class="logo-color">Web</span><span class="logo-color-white">Studio</span> </a>
 
-<address>
-    <p class="address location">г. Киев Леси Украинки, 26</p>
+    <address>
+        <p class="footer-address">г. Киев Леси Украинки, 26</p>
 
-    <ul class="list">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:=380961111111" class=link>+38 096 111 11 11</a></li>
-    </ul>
-</address>
-    </footer>
+        <ul class="list">
+            <li class="footer-list">
+                <a class="footer-item" href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            </li>
+            <li class="footer-list">
+                <a class="footer-item" href="tel:=380961111111" class=link>+38 096 111 11 11</a>
+            </li>
+        </ul>
+    </address>
+</footer>
         </body>
 
         </html>
