--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
             <h2 class="visually-hidden">Наши преимущества</h2>
             <ul class="list">
                 <li>
-                    <h2 class="section-title benefits">ВНИМАНИЕ К ДЕТАЛЯМ</h2>
+                    <h2 class="benefits-title">ВНИМАНИЕ К ДЕТАЛЯМ</h2>
                     <p class="benefits-description">
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
                 </li>
                 <li>
-                    <h2 class="section-title benefits">ПУНКТУАЛЬНОСТЬ</h2>
+                    <h2 class="benefits-title">ПУНКТУАЛЬНОСТЬ</h2>
                     <p class="benefits-description">
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
                 <li>
-                    <h2 class="section-title benefits">ПЛАНИРОВАНИЕ</h2>
+                    <h2 class="benefits-title">ПЛАНИРОВАНИЕ</h2>
                     <p class="benefits-description">
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
                 <li>
-                    <h2 class="section-title benefits">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h2>
+                    <h2 class="benefits-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h2>
                     <p class="benefits-description">
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
@@ -75,41 +75,41 @@
         <section class="section">
             <h2 class="workingplace-title">Чем мы занимаемся</h2>
 
-            <ul class=" workingplace-list list">
-                <li>
-                    <img src="./img/box1.jpg" alt="Рабочий стол разработчика" width="370" />
+            <ul class="list">
+                <li  class="workingplace-item" >
+                    <img class="workingplace-image" src="./img/box1.jpg" alt="Рабочий стол разработчика" width="370" />
                 </li>
-                <li>
+                <li class="workingplace-item">
                     <img src="./img/box2.jpg" alt="Рабочий стол разработчика" width="370" />
                 </li>
-                <li>
+                <li class="workingplace-item">
                     <img src="./img/box3.jpg" alt="Рабочий стол разработчика1" width="370" />
                 </li>
             </ul>
         </section>
 
         <!--Наша команда -->
-        <section class="section">
+        <section class="section team-section">
             <h2 class="team-title">Наша команда</h2>
 
-            <ul class=" team-title list">
+            <ul class="list">
                 <li class="item">
-                    <img src="./img/img1.jpg" alt="Сотрудник нашей команды"  width="270"/>
+                    <img  class="team-photo" src="./img/img1.jpg" alt="Сотрудник нашей команды"  width="270"/>
                     <h3 class="team-name">Игорь Демьяненко</h3>
                     <p class="team-position"> Product designer</p>
                 </li>
             <li class="item">
-                <img src="./img/img2.jpg" alt="Сотрудник нашей команды" width="270" />
+                <img class="team-photo" src="./img/img2.jpg" alt="Сотрудник нашей команды" width="270" />
                 <h3 class="team-name">Ольга Репина</h3>
                 <p class="team-position"> Frontend developer</p>
             </li>
             <li class=item>
-               <img src="./img/img3.jpg" alt="Сотрудник нашей команды" width="270" />
+               <img class="team-photo" src="./img/img3.jpg" alt="Сотрудник нашей команды" width="270" />
                 <h3 class="team-name">Николай Тарасов</h3>
                 <p class="team-position"> Marketing</p>
             </li>
             <li class="item">
-               <img src="./img/img4.jpg" alt="Сотрудник нашей команды" width="270" />
+               <img class="team-photo" src="./img/img4.jpg" alt="Сотрудник нашей команды" width="270" />
                 <h3 class="team-name">Михаил Ермаков</h3>
                 <p class="team-position"> UA designer</p>
             </li>
@@ -122,11 +122,15 @@
         <a class="logo"><span class="logo-color">Web</span><span class="logo-color-white">Studio</span> </a>
 
         <address>
-            <p class="address location">г. Киев Леси Украинки, 26</p>
+            <p class="footer-address">г. Киев Леси Украинки, 26</p>
 
             <ul class="list">
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:=380961111111" class=link>+38 096 111 11 11</a></li>
+                <li class="footer-list">
+                    <a  class="footer-item" href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                </li>
+                <li class="footer-list">
+                    <a class="footer-item" href="tel:=380961111111" class=link>+38 096 111 11 11</a>
+                </li>
             </ul>
         </address>
     </footer>
