--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
 
             <ul class="list">
                 <li class="footer-list">
-                    <a  class="footer-item" href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                    <a  class="footer-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li class="footer-list">
-                    <a class="footer-item" href="tel:=380961111111" class=link>+38 096 111 11 11</a>
+                    <a class="footer-item" href="tel:=380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
