добавляет правки класса

--- a/portfolio.html
+++ b/portfolio.html
@@ -126,9 +126,8 @@
 <footer class="footer-section">
     <a class="logo"><span class="logo-color">Web</span><span class="logo-color-white">Studio</span> </a>
 
-    <address>
-        <p class="footer-address">г. Киев Леси Украинки, 26</p>
-
+    <address class="footer-address">
+        <p >г. Киев Леси Украинки, 26</p>
         <ul class="list">
             <li class="footer-list">
                 <a class="footer-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
