--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <!-- Шапка сайта -->
     <header class="header">
         <nav class="site-nav">
-           <a class="logo"><span class="logo-color">Web</span>Studio</a>
+           <a  href="/index.html" class="logo"><span class="logo-color">Web</span>Studio</a>
             <ul class="site-nav list">
                 <li><a href="/index.html" class="link">Cтудия</a></li>
                 <li><a href="" class="link-current">Портфолио</a></li>
@@ -56,67 +56,67 @@
             <!-- Портфолио -->
             <ul class="list">
                 <li>
-                  <article>
+                  <a>
                    <img src="./img/portimg1.jpg" alt="веб-сайт технокряк" width="370" height="294" />
                     <h2 class="portfolio-title">Технокряк</h2>
                     <p class="portfilio-description">Веб-сайт</p>
-                  </article>
+                  </a>
                 </li>
                 <li>
-                  <article>
+                  <a>
                     <img src="./img/portimg2.jpg" alt="Постер New Orlean vs Golden Star дизайн" width="370" height="294" />
                     <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                     <p class="portfilio-description">Дизайн</p>
-                  </article>
+                  </a>
                 </li>
                 <li>
-                 <article>
+                 <a>
                     <img src="./img/portimg3.jpg" alt="Ресторан Seafood приложение" width="370" height="294"/>
                     <h2 class="portfolio-title">Ресторан Seafood</h2>
                     <p class="portfilio-description">Приложение</p>
-                  </article>
+                  </a>
                 </li>
                 <li>
-                 <article>
+                 <a>
                     <img src="./img/portimg4.jpg" alt="Проект Prime маркетинг" width="370" height="294"/>
                     <h2 class="portfolio-title">Проект prime</h2>
                     <p class="portfilio-description"> Маркетинг</p>
-                 </article>
+                 </a>
                 </li>
                 <li>
-                    <article>
+                    <a>
                     <img src="./img/portimg5.jpg" alt="Проект Boxes прилолжение" width="370" height="294"/>
                     <h2 class="portfolio-title">Проект Boxes</h2>
                     <p class="portfilio-description">Приложение</p>
-                </article>
+                </a>
                 </li>
                 <li>
-                    <article>
+                    <a>
                     <img src="./img/portimg6.jpg" alt="Inspiration has no Borders веб-сайт" width="370" height="294" />
                     <h2 class="portfolio-title">Inspiration has no Borders</h2>
                     <p class="portfilio-description">Веб-сайт</p>
-                </article>
+                </a>
                 </li>
                 <li>
-                    <article>
+                    <a>
                     <img src="./img/portimg7.jpg" alt="Издание Limited Edition дизайн" width="370" height="294"/>
                     <h2 class="portfolio-title">Издание Limited Edition</h2>
                     <p class="portfilio-description">Дизайн</p>
-                </article>
+                </a>
                 </li>
                 <li>
-                    <article>
+                    <a>
                     <img src="./img/portimg8.jpg" alt="Проект LAB маркетинг" width="370" height="294"/>
                     <h2 class="portfolio-title">Проект LAB</h2>
                     <p class="portfilio-description">Маркетинг</p>
-                </article>
+                </a>
                 </li>
                 <li>
-                    <article>
+                    <a>
                     <img src="./img/portimg9.jpg" alt="НGrowing Business приложение" width="370" height="294"/>
                     <h2 class="portfolio-title">Growing Business</h2>
                     <p class="portfilio-description">Приложение</p>
-            </article>
+            </a>
                 </li>
             </ul>
         </section>
